# jenkins-demo

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.jenkins  Dockerfile.jenkins-agent  Jenkinsfile  README.md  docker-compose.yml  explaining.jenkins  optimized.jenkins  pyproject.toml  pytest.ini  requirements.txt  start-docker.sh
app/: __init__.py  main.py
tests/: test_main.py
